[package]
name = "rrtt"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
memoffset = "0.8"

[features]
semaphore = []
mutex = []
event = []
mailbox = []
message-queue = []
mem-heap = []
mem-pool = []
device = []
